add: GetReport handler swagger docs
